Initial Generated Site

--- a/danh-muc-san-pham/tay-cam/tay-cam-ps4/index.html
+++ b/danh-muc-san-pham/tay-cam/tay-cam-ps4/index.html
@@ -567,7 +567,7 @@ img.emoji {
 </li>
 <li class="email">
 <i class=" icon-envelope" aria-hidden="true" role="img"></i><div class="oceanwp-info-wrap">
-<span class="oceanwp-contact-title">Email:</span><span class="oceanwp-contact-text"><a href="mailto:&#099;o&#110;t&#097;c&#116;&#064;&#115;&#117;pp&#111;rt.&#099;o&#109;">contact@support.com</a><span class="screen-reader-text">Opens in your application</span></span>
+<span class="oceanwp-contact-title">Email:</span><span class="oceanwp-contact-text"><a href="mailto:&#099;&#111;n&#116;&#097;ct&#064;s&#117;p&#112;&#111;&#114;&#116;.&#099;o&#109;">contact@support.com</a><span class="screen-reader-text">Opens in your application</span></span>
 </div>
 </li>
 <li class="web">
