--- a/lien-he-2/index.html
+++ b/lien-he-2/index.html
@@ -539,7 +539,7 @@ img.emoji {
 </li>
 <li class="email">
 <i class=" icon-envelope" aria-hidden="true" role="img"></i><div class="oceanwp-info-wrap">
-<span class="oceanwp-contact-title">Email:</span><span class="oceanwp-contact-text"><a href="mailto:&#099;&#111;&#110;ta&#099;t&#064;su&#112;p&#111;r&#116;.&#099;o&#109;">contact@support.com</a><span class="screen-reader-text">Opens in your application</span></span>
+<span class="oceanwp-contact-title">Email:</span><span class="oceanwp-contact-text"><a href="mailto:co&#110;&#116;&#097;&#099;&#116;&#064;&#115;&#117;ppo&#114;&#116;&#046;co&#109;">contact@support.com</a><span class="screen-reader-text">Opens in your application</span></span>
 </div>
 </li>
 <li class="web">
